update routers logic
