# backend/internal/controller/handlers/api/handlers.go
@@ -1,0 +1,49 @@
+package api
+
+import (
+	"net/http"
+
+	"github.com/goawwer/devclash/internal/controller/wrapper"
+	"github.com/goawwer/devclash/middleware"
+)
+
+// @Summary      Authorized
+// @Description  Check current state of authorization
+// @Tags         api
+// @Accept       json
+// @Produce      json
+// @Success      200
+// @Security     CookieAuth
+// @Failure      401          {object} wrapper.CustomError
+// @Router       /api/check [get]
+func Check(_ *wrapper.Wrapper, _ *middleware.CustomClaims) (any, error) {
+	return nil, nil
+}
+
+// @Summary      Logout
+// @Description  Refreshes TokenPair and check refresh token is consumed or not
+// @Tags         api
+// @Accept       json
+// @Produce      json
+// @Success      200
+// @Security     CookieAuth
+// @Failure      401          {object} wrapper.CustomError
+// @Router       /api/logout [post]
+func Logout(w *wrapper.Wrapper, _ *middleware.CustomClaims) (any, error) {
+	http.SetCookie(w.Writer(), &http.Cookie{
+		Name:     "access",
+		Value:    "",
+		Path:     "/",
+		MaxAge:   -1,
+		HttpOnly: true,
+	})
+	http.SetCookie(w.Writer(), &http.Cookie{
+		Name:     "refresh",
+		Value:    "",
+		Path:     "/",
+		MaxAge:   -1,
+		HttpOnly: true,
+	})
+
+	return nil, nil
+}
