# backend/internal/controller/handlers/api/router.go
@@ -3,6 +3,7 @@ package api
 import (
 	"github.com/go-chi/chi/v5"
 	userHandler "github.com/goawwer/devclash/internal/controller/handlers/api/user"
+	"github.com/goawwer/devclash/internal/controller/wrapper"
 	"github.com/goawwer/devclash/internal/usecase"
 	"github.com/goawwer/devclash/middleware"
 )
@@ -11,6 +12,12 @@ func New(u *usecase.AppUsecase) *chi.Mux {
 	r := chi.NewRouter()
 
 	r.Use(middleware.Middleware)
+
+	// api authorized logic
+	r.Group(func(r chi.Router) {
+		r.Get("/check", wrapper.AuthWrap(Check))
+		r.Post("/logout", wrapper.AuthWrap(Logout))
+	})
 
 	userHandler := userHandler.New(u.User)
 
